# CSTesting-Python

./: .gitignore  README.md  pyproject.toml  requirements.txt
cstesting/: __init__.py  __main__.py  api_request.py  assertions.py  browser.py  cli.py  config_parser.py  config_runner.py  report.py  runner.py  tags.py  types.py
example/: apitesting_test.py  login.conf  math_test.py
templates/pages/: HomePage.py
templates/tests/: home_test.py
