[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cstesting"
version = "0.1.0"
description = "Python testing framework — test runner, assertions, API testing, browser automation (EasyTesting/CSTesting port)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Gorantla Lokesh" }]
keywords = ["testing", "test-runner", "assertions", "playwright", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]

[project.scripts]
cstesting = "cstesting.cli:main"
cst = "cstesting.cli:main"

[project.urls]
Homepage = "https://github.com/lokesh771988/EasyTesting"
Repository = "https://github.com/lokesh771988/EasyTesting"

[tool.setuptools.packages.find]
where = ["."]
include = ["cstesting*"]

[tool.setuptools.package-dir]
"" = "."
